# ai-job-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: validate.yml
alembic/: env.py
alembic/versions/: 0001_foundation_slice.py  0002_candidate_knowledge_base_slice.py  0003_evaluation_history_and_created_at.py  0004_document_assisted_fact_ingestion.py  0005_greenhouse_job_discovery.py  0006_source_detection_runs.py  0007_candidate_remote_geographies.py  0008_saved_job_searches.py
docker/postgres/init/: 01-create-test-db.sql
docs/: architecture.md  domain-model.md
docs/ai-context/: README.md  api-web-cli-surfaces.md  application-services.md  architecture.md  codegraph-validation.md  codegraph.md  current-priorities.md  domain-lifecycles.md  external-integrations.md  persistence-and-migrations.md  prompt-recipes.md  repository-navigation.md  service-boundaries.md  testing-and-acceptance.md
docs/decisions/: 0001-foundation-architecture.md  0002-candidate-knowledge-base.md  0003-document-assisted-career-fact-ingestion.md  0004-greenhouse-job-discovery-ingestion.md  0005-deterministic-greenhouse-source-detection.md
src/ai_job_finder/: bootstrap.py  calibrate_scoring.py  detect_source.py  dev.py  greenhouse_smoke.py  live_smoke.py  main.py  settings.py  source_detection_smoke.py  sync_source.py
src/ai_job_finder/api/: dependencies.py  errors.py
src/ai_job_finder/application/: document_services.py  extraction.py  job_imports.py  services.py  source_detection.py
src/ai_job_finder/bootstrap/: __init__.py  cli.py  client.py  contracts.py  fixtures.py  harness.py
src/ai_job_finder/domain/: __init__.py  candidate.py  career_fact.py  common.py  document_ingestion.py  enums.py  errors.py  evaluation.py  job_lead.py  job_sources.py  location_eligibility.py  scoring.py  source_detection.py
src/ai_job_finder/infrastructure/: public_fetcher.py  storage.py  text_extraction.py
src/ai_job_finder/web/: dependencies.py
tests/fixtures/scoring/: golden_set_v1.json
tests/integration/: conftest.py  test_api.py  test_db_constraints.py  test_document_api.py  test_source_detection.py  test_web.py
tests/integration/api/: test_candidate.py  test_career_facts.py  (+4 more)
tests/unit/: test_bootstrap.py  test_document_ingestion.py  test_greenhouse_connector.py  test_job_imports.py  test_job_search_matching.py  test_location_eligibility.py  test_public_fetcher.py  test_scoring.py  test_scoring_calibration.py  test_sync_source.py  test_workflow.py
(+109 files in other folders)
