[project]
name = "ai-job-assistant"
version = "0.1.0"
description = "Foundation slice for an AI-assisted executive job search platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"alembic>=1.16.4",
	"fastapi>=0.116.0",
	"jinja2>=3.1.4",
	"pydantic-settings>=2.10.1",
	"python-multipart>=0.0.9",
	"psycopg[binary]>=3.2.9",
	"sqlalchemy>=2.0.42",
	"uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
	"httpx>=0.28.1",
	"mypy>=1.17.0",
	"pre-commit>=4.2.0",
	"pytest>=8.4.1",
	"ruff>=0.12.3",
]

[project.scripts]
ai-job-finder-seed = "ai_job_finder.infrastructure.database.seed:main"
ai-job-finder-fast-checks = "ai_job_finder.dev:fast_checks_main"
ai-job-finder-format = "ai_job_finder.dev:format_main"
ai-job-finder-tests = "ai_job_finder.dev:tests_main"
ai-job-finder-validate = "ai_job_finder.dev:validate_main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true
